# http-api/src/main/resources/api.yaml
@@ -40,13 +40,22 @@ components:
         timestamp:
           type: string
           format: date-time
+    JobConfig:
+      type: object
+      properties:
+        config:
+          title: The job json configuration.
+          type: object
+        seed:
+          title: The job seed uri.
+          type: string
+      required:
+        - config
+        - seed
     JobDetails:
       allOf:
         - $ref: '#/components/schemas/Job'
-        - type: object
-        - properties:
-            config:
-              type: object
+        - $ref: '#/components/schemas/JobConfig'
       
 paths:
   /jobs:
@@ -72,8 +81,7 @@ paths:
         content:
           application/json:
             schema:
-              description: The JSON describing the job.
-              type: object
+              $ref: '#/components/schemas/JobConfig'
       responses:
         '200':
           description: A JSON of the new job.
@@ -104,8 +112,8 @@ paths:
         '404':
           description: Job not found
     post:
-      summary: Change the status of the job.
-      operationId: changeJobStatus
+      summary: Enqueue a new job for execution
+      operationId: enqueueJob
       parameters:
         - name: jobId
           in: path
@@ -113,22 +121,16 @@ paths:
           description: The job id.
           schema:
             type: string
-        - name: status
-          in: query
-          required: true
-          description: The new status of the job.
-          schema:
-            $ref: '#/components/schemas/JobStatus'
       responses:
         '200':
           description: HTTP status code of the current operation.
         '400':
-          description: When the new status is unacceptable.
+          description: When the job can't be enqueued for execution.
         '404':
           description: Job not found
     delete:
-      summary: Delete the job.
-      operationId: deleteJob
+      summary: Cancel the job execution.
+      operationId: cancelJob
       parameters:
         - name: jobId
           in: path
@@ -139,6 +141,8 @@ paths:
       responses:
         '200':
           description: HTTP status code of the current operation.
+        '400':
+          description: When the job can't be cancelled.
         '404':
           description: Job not found
 
